RESOLVED FIXED19696
Memory leak in WebCore/editing/DeleteButtonController.cpp
https://bugs.webkit.org/show_bug.cgi?id=19696
Summary Memory leak in WebCore/editing/DeleteButtonController.cpp
Rahul Kuchhal
Reported 2008-06-20 14:34:08 PDT
Purify reports a memory leak at: webkit/webcore/editing/deletebuttoncontroller.cpp:198 WebCore::DeleteButtonController::createDeletionUI(void) webkit/webcore/editing/deletebuttoncontroller.cpp:230 WebCore::DeleteButtonController::show(HTMLElement::WebCore *) webkit/webcore/editing/deletebuttoncontroller.cpp:138 WebCore::DeleteButtonController::respondToChangedSelection(Selection::WebCore const&) webkit/webcore/editing/editor.cpp:396 WebCore::Editor::respondToChangedSelection(Selection::WebCore const&)
Attachments
Patch for the bug (648 bytes, patch)
2008-06-20 14:44 PDT, Rahul Kuchhal
no flags
Patch (1.13 KB, patch)
2008-06-20 15:18 PDT, Rahul Kuchhal
darin: review+
Rahul Kuchhal
Comment 1 2008-06-20 14:44:00 PDT
Created attachment 21860 [details] Patch for the bug
Rahul Kuchhal
Comment 2 2008-06-20 15:18:41 PDT
Darin Adler
Comment 3 2008-06-20 15:53:29 PDT
Comment on attachment 21862 [details] Patch r=me
Mark Rowe (bdash)
Comment 4 2008-06-22 17:51:35 PDT
As per my comment in bug 19697, please take care when creating the ChangeLog entry.
Mark Rowe (bdash)
Comment 5 2008-06-22 17:52:14 PDT
Landed in r34730.
Note You need to log in before you can comment on or make changes to this bug.