2008-06-22  kuchhal  <kuchhal@yahoo.com>

Reviewed by Darin Adler.

        Fix https://bugs.webkit.org/show_bug.cgi?id=19696
        Bug 19696: Memory leak in WebCore/editing/DeleteButtonController.cpp

        * editing/DeleteButtonController.cpp:
        (WebCore::DeleteButtonController::createDeletionUI): Delete the Image instance
        if the platform resource could not be loaded.


git-svn-id: svn://svn.chromium.org/blink/trunk@34730 bbb929c8-8fbe-4397-9dbb-9b2b20218538